[package]
name = "net-mesh-mcp"
version = "0.31.0"
edition = "2021"
description = "MCP (Model Context Protocol) edge adapter for the Net mesh — net wrap / net mcp serve"
license = "Apache-2.0"
repository = "https://github.com/ai-2070/net"

[lib]
# `use net_mcp::...` — the published artifact is `net-mesh-mcp`.
name = "net_mcp"

[features]
# `fixture` gates the `net-mcp-fixture` conformance server — a test-only
# stdio MCP server — and the integration tests that spawn it. It is NOT a
# default feature, so a plain build / `cargo install net-mesh-mcp` ships the
# library alone and never installs the fixture as a user-facing binary.
# Enable it to build + run the end-to-end suite:
#   cargo test -p net-mesh-mcp --features fixture
fixture = []

# `keychain` gates the OS-keychain secret value backend
# (`MCP_CREDENTIAL_FORWARDING_PLAN.md` Phase 1) — macOS Keychain, Windows
# Credential Manager, and the Linux kernel `keyutils` (all pure Rust, no C
# system library and no D-Bus / Secret Service; see the dependency note below).
# NOT a default feature: it pulls the keyring-core stack and needs a
# keychain-capable host to *run*, so the default build / CI / `cargo install`
# never compile it. Enable it to build the backend:
#   cargo test -p net-mesh-mcp --features keychain
keychain = [
    "dep:keyring-core",
    "dep:linux-keyutils-keyring-store",
    "dep:windows-native-keyring-store",
    "dep:apple-native-keyring-store",
]

# ---------------------------------------------------------------------------
# Doctrine (MCP_BRIDGE_PLAN.md #1): this adapter rides on `net-mesh-sdk`
# ONLY — never on core crates directly. The single mesh-facing dependency
# is `net-mesh-sdk`; everything else is protocol / serialization support.
# A CI dependency check (Open Risks table) enforces that `net-mesh` never
# appears as a *direct* dependency here — only transitively via the SDK.
# The `tool` feature is what surfaces `net_sdk::tool::ToolDescriptor`, the
# lowering target.
# ---------------------------------------------------------------------------
[dependencies]
# `tool` surfaces `ToolDescriptor` (the lowering target) and the
# `serve_tool` / `call_tool` provider+caller verbs the announce/invoke
# slices need; it pulls `net` (the SDK tool module is written against the
# mesh-RPC surface) and `cortex`.
net-mesh-sdk = { version = "0.31.0", path = "../../sdk", default-features = false, features = [
    "net",
    "tool",
] }
async-trait = "0.1"
bytes = "1"
# Sealed-box crypto for the forwarded-context sealer (Phase 2): X25519 ECDH +
# BLAKE2s-MAC KDF + XChaCha20-Poly1305 AEAD, mirroring the core's proven
# identity-envelope construction. Pure-Rust "protocol support" (the
# dependency-boundary test forbids only a direct `net-mesh` dep, not crypto
# crates). `blake2` and `x25519-dalek` share core's already-locked versions;
# `chacha20poly1305` 0.11 and `getrandom` 0.4 pull a newer major than core's
# (0.10 / 0.2–0.3), which Cargo coexists — a deliberate trade of a second
# locked copy for staying current, not an oversight.
blake2 = "0.10"
chacha20poly1305 = "0.11"
getrandom = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
# Cross-process advisory file locking for the shared pin store, so a
# load→modify→save transaction can't interleave with another shim / the pin
# CLI and resurrect a removed consent decision.
fs2 = "0.4"
# Stream combinators for bounded-concurrency provider fan-out in the demand
# side's `search` (`buffer_unordered`).
futures = "0.3"
# OS-keychain secret value backend, behind the non-default `keychain` feature
# (see `[features]`). We link `keyring-core` + the individual native store
# crates directly (below), NOT the `keyring` façade: keyring 4's `v1` compat
# feature force-selects the Secret Service (zbus) store on Linux, which needs a
# running D-Bus session that a headless server / CI / minimal image lacks and
# drags in the whole zbus/secret-service tree. Linking the stores directly lets
# `keychain.rs` set the Linux kernel `keyutils` store (pure Rust, no C lib, no
# dbus, works headless) as the process default. Trade-off: a keyutils keyring
# persists for the login session, not across reboots — for a reboot-persistent
# Linux backend, add `zbus-secret-service-keyring-store` (pure Rust) or
# `dbus-secret-service-keyring-store` (needs libdbus) and select it in
# `keychain.rs`. Only compiled when `keychain` is enabled.
keyring-core = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "rt", "sync", "time", "fs"] }

# Native keychain stores for the `keychain` feature — one per OS, each
# target-gated so only the host platform's store compiles (and Linux gets
# `keyutils`, never Secret Service). Activated by the `keychain` feature above;
# the store is set as the process default in `keychain.rs`.
[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { version = "1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1.1", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
apple-native-keyring-store = { version = "1", optional = true, features = ["keychain"] }

[dev-dependencies]
# Parses this crate's own manifest in the dependency-boundary test.
toml = "1"
# Isolated temp dirs for the pin-store file tests.
tempfile = "3"
tokio = { version = "1", features = [
    "process",
    "io-util",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }

# The conformance fixture (MCP_BRIDGE_PLAN.md cross-cutting workstreams):
# a hermetic stdio MCP server with injectable behaviors that acceptance
# runs against — never against GitHub. Co-located in this crate so the
# integration tests can spawn it via `CARGO_BIN_EXE_net-mcp-fixture`;
# extractable into its own artifact later without touching the wire types.
# `required-features` keeps this test helper out of the published/installed
# artifact — it only builds under `--features fixture`.
[[bin]]
name = "net-mcp-fixture"
path = "src/bin/fixture.rs"
required-features = ["fixture"]

# The end-to-end tests spawn the fixture via `CARGO_BIN_EXE_net-mcp-fixture`,
# so they require the same `fixture` feature (a plain `cargo test` skips them;
# `--features fixture` builds the fixture and runs them). `dependency_boundary`
# needs no fixture and stays auto-discovered.
[[test]]
name = "serve_end_to_end"
required-features = ["fixture"]

[[test]]
name = "stdio_round_trip"
required-features = ["fixture"]

[[test]]
name = "wrap_end_to_end"
required-features = ["fixture"]

# Mirror the workspace panic-hygiene lints (there is no [workspace.lints]
# table to inherit from — the core crate declares these per-package).
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
