[package]
name = "net-node"
version = "0.25.1"
edition = "2021"
license = "Apache-2.0"
description = "Node.js bindings for Net event bus"
# Distributed via npm as `@net-mesh/core` (see package.json), not via
# crates.io. Block accidental `cargo publish`.
publish = false

[lib]
# `rlib` is needed alongside `cdylib` so in-crate `#[cfg(test)] mod
# tests` blocks can run (cargo requires rlib to link the unit-test
# harness). Publishing still ships the `.node` cdylib; the rlib is
# a build artifact only.
crate-type = ["cdylib", "rlib"]

[features]
# Out-of-the-box `npm install @net-mesh/sdk` ships the full
# distributed-agent stack: mesh transport + NAT traversal +
# typed nRPC + capability-based service discovery + daemon
# supervision + replica/fork/standby coordination + MeshOS
# daemon-authoring + dataforts blob storage + MeshDB federated
# query plane + Redis dedup helper. Web devs can't recompile
# a wheel — whatever ships in the `.node` is what they have,
# so every primitive a harness vendor would plausibly want is
# on by default and discoverable through the typings.
#
# `jetstream` / `port-mapping` / `test-helpers` stay opt-in:
# the NATS-specific adapter (+1.3 MB, niche audience that
# knows it wants NATS), the UPnP/SOAP +1.4 MB outlier, and
# the test-only injector surface.
default = [
    "net",
    "nat-traversal",
    "cortex",
    "compute",
    "groups",
    "meshos",
    "dataforts",
    "meshdb",
    "redis",
    "aggregator",
    "tool",
]
# Pulls in `net-sdk` at its `redis` sub-feature for the
# `RedisStreamDedup` consumer helper. The dedup helper is a thin
# NAPI wrapper around the canonical Rust implementation rather
# than a re-implementation.
#
# Each Node feature opts in explicitly via its own
# `net-sdk/<sub>` activation below; the `[dependencies]` line for
# `net-sdk` clears its default features so a Redis-only consumer
# build does not transitively compile the compute / groups
# surfaces.
redis = ["net/redis", "dep:net-sdk", "net-sdk/redis"]
jetstream = ["net/jetstream"]
# Core mesh transport. Bundles the identity, capabilities, and
# subnet surfaces — they share `adapter::net`'s subprotocol dispatch
# and are operationally inseparable (subnet enforcement reuses the
# capability broadcast; channel auth uses all three together), so
# separate NAPI flags would only enable combinations that don't
# actually work end-to-end.
net = ["net/net", "dep:hex"]
# NAT traversal — reflex probes, classification, rendezvous-
# coordinated hole-punch, and the stats surface. Exposed as
# optional on the NAPI class (methods return a typed Traversal
# error with stable `kind` discriminator when invoked; none of
# the existing surface changes). Framing (plan §5): traversal
# is an optimization, not a connectivity requirement. See the
# `NAT_TRAVERSAL_PLAN.md` top-of-doc framing rules.
nat-traversal = ["net", "net/nat-traversal"]
# Port mapping — opportunistic UPnP-IGD / NAT-PMP / PCP at
# startup. Exposes `tryPortMapping?: boolean` on `MeshOptions`.
# Builds on `nat-traversal`.
port-mapping = ["nat-traversal", "net/port-mapping"]
cortex = ["net/netdb", "net/redex-disk", "dep:async-trait"]
# AI tool calling — exposes MeshNode::list_tools() through the
# napi class as `NetMesh.listTools()`. Includes the substrate's
# `tool::*` types (ToolDescriptor, ToolEvent, ToolMetadataRegistry,
# tool.metadata.fetch RPC). On by default; binary cost is small
# (the feature is just the substrate-side types + the lazy
# auto-installed nRPC handler in the SDK). See AGENT_TOOLS.md.
tool = ["net/tool", "cortex"]
# Dataforts (Rebel Yell) surface — compiles the operator methods
# wiring greedy-LRU + data-gravity + future phases. Same shape as
# the Python binding — depends on cortex transitively for the
# Redex surface. Off by default; downstream consumers opt in.
# Toggling greedy / gravity at runtime is via `Redex::enable_*`
# methods; the Cargo feature only gates whether the binding
# surface compiles at all.
dataforts = ["cortex", "net", "net/dataforts"]
# Compute surface — `DaemonRuntime`, `MeshDaemon`, migration.
# Depends on `net` (mesh transport is what daemons ride) and
# brings in `net-sdk` at its `compute` feature for the
# already-shipped Rust surface. `dashmap` is added here because
# the compute module keeps a `kind -> TSFN` map that needs
# concurrent access without serializing the whole NAPI runtime.
# `net-sdk/compute` is forwarded explicitly so the SDK's compute
# code only compiles when this feature is active.
compute = ["net", "dep:net-sdk", "net-sdk/compute", "dep:dashmap"]
# HA / scaling overlays — `ReplicaGroup` / `ForkGroup` / `StandbyGroup`.
# Follows `SDK_GROUPS_SURFACE_PLAN.md`. Sits on top of `compute`.
# Forwards to `net-sdk/groups` so the SDK groups surface is only
# pulled into the build when this flag is set — a `compute`-only
# build doesn't compile the groups code.
groups = ["compute", "net-sdk/groups"]
# MeshOS daemon-author SDK (`MESHOS_SDK_PLAN.md` Phase 3). Builds on
# `compute` for the `MeshDaemon` trait + `Identity` wrapper and on
# the substrate's `net/meshos` for the supervisor runtime. The
# substrate's `meshos` feature implies `cortex`, which the Node
# binding's `cortex` feature already activates — list it here so
# consumers asking only for `meshos` get the full transitive dep
# chain.
meshos = ["compute", "cortex", "net/meshos", "net-sdk/meshos"]
# Deck SDK — operator-side bindings (`DECK_SDK_PLAN.md` Phase 5).
# Builds on `meshos` for the supervisor runtime + snapshot reader.
# Phase 1 substrate constraint: non-signing today.
deck = ["meshos", "net-sdk/deck"]
# Test-only helpers (`testInjectSyntheticPeer`, etc.). Gated
# separately so enabling `groups` alone does NOT export test-only
# APIs to production JS consumers. The vitest suite builds with
# `--features groups,test-helpers`; release / consumer builds stop
# at `--features groups`.
test-helpers = ["groups"]
# Aggregator-registry RPC client surface (`SDK_AGGREGATOR_SUBNET_PLAN.md`
# Stage 2). Builds on `net` + pulls in the SDK's `aggregator`
# re-export module so the NAPI binding gets BoundRegistryClient
# + install_aggregator_registry_service helpers for free.
aggregator = ["net", "dep:net-sdk", "net-sdk/aggregator"]
# MeshDB query layer — federated AST + planner + executor + result
# cache. Standalone of `net`: the Node SDK's first MeshDB slice
# ships a local executor over an in-memory ChainReader, so it
# doesn't require the mesh transport surface to compile.
meshdb = ["net/meshdb", "dep:postcard"]

[dependencies]
net = { package = "net-mesh", version = "0.25.1", path = "../..", default-features = false }
net-sdk = { package = "net-mesh-sdk", version = "0.25.1", path = "../../sdk", default-features = false, optional = true }
dashmap = { version = "6", optional = true }
parking_lot = "0.12"
napi = { version = "3.7.0", default-features = false, features = ["napi4", "napi6", "async", "tokio_rt"] }
napi-derive = "3.4.0"
# Zeroizing wrapper for transient operator-seed copies in the
# DeckClient / OperatorIdentity standalone constructors.
zeroize = "1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
# async-trait is needed because nRPC's RpcHandler trait is
# async; the implementor (NodeRpcHandler in mesh_rpc.rs) must
# use the same #[async_trait] macro the trait was defined with.
# Optional + cortex-gated so non-cortex builds don't pull it in.
async-trait = { version = "0.1", optional = true }
serde_json = "1.0.145"
bytes = "1.11.0"
arc-swap = "1.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hex = { version = "0.4", optional = true }
# Postcard is the canonical MeshDB wire codec; the Node binding
# decodes aggregate / joined-row / window payloads from result-row
# bytes. Pulled in only when the `meshdb` feature activates.
postcard = { version = "1", default-features = false, features = ["alloc"], optional = true }

[build-dependencies]
napi-build = "2.3.1"

# `[profile.release]` is intentionally NOT declared here. Cargo
# ignores non-root profiles with a warning ("profiles for the non
# root package will be ignored"). The workspace root Cargo.toml
# already sets `lto = true` (plus codegen-units = 1, panic = abort,
# opt-level = 3) under `[profile.release]`, and that's what governs
# this binding's release build.
