[package]
name = "net-node"
version = "0.32.0"
edition = "2021"
license = "Apache-2.0"
description = "Node.js bindings for Net event bus"
# Distributed via npm as `@net-mesh/core` (see package.json), not via
# crates.io. Block accidental `cargo publish`.
publish = false

[lib]
# `rlib` is needed alongside `cdylib` so in-crate `#[cfg(test)] mod
# tests` blocks can run (cargo requires rlib to link the unit-test
# harness). Publishing still ships the `.node` cdylib; the rlib is
# a build artifact only.
crate-type = ["cdylib", "rlib"]

[features]
# Out-of-the-box `npm install @net-mesh/sdk` ships the full
# distributed-agent stack: mesh transport + NAT traversal +
# typed nRPC + capability-based service discovery + daemon
# supervision + replica/fork/standby coordination + MeshOS
# daemon-authoring + dataforts blob storage + MeshDB federated
# query plane + Redis dedup helper. Web devs can't recompile
# a wheel — whatever ships in the `.node` is what they have,
# so every primitive a harness vendor would plausibly want is
# on by default and discoverable through the typings.
#
# `jetstream` / `port-mapping` / `test-helpers` stay opt-in:
# the NATS-specific adapter (+1.3 MB, niche audience that
# knows it wants NATS), the UPnP/SOAP +1.4 MB outlier, and
# the test-only injector surface.
default = [
    "net",
    "nat-traversal",
    "cortex",
    "compute",
    "groups",
    "meshos",
    "dataforts",
    "meshdb",
    "redis",
    "aggregator",
    "tool",
    "consent",
    "mcp",
    "publish",
    "payments",
    "delegation",
    "a2a",
]
# Pulls in `net-sdk` at its `redis` sub-feature for the
# `RedisStreamDedup` consumer helper. The dedup helper is a thin
# NAPI wrapper around the canonical Rust implementation rather
# than a re-implementation.
#
# Each Node feature opts in explicitly via its own
# `net-sdk/<sub>` activation below; the `[dependencies]` line for
# `net-sdk` clears its default features so a Redis-only consumer
# build does not transitively compile the compute / groups
# surfaces.
redis = ["net/redis", "dep:net-sdk", "net-sdk/redis"]
jetstream = ["net/jetstream"]
# Core mesh transport. Bundles the identity, capabilities, and
# subnet surfaces — they share `adapter::net`'s subprotocol dispatch
# and are operationally inseparable (subnet enforcement reuses the
# capability broadcast; channel auth uses all three together), so
# separate NAPI flags would only enable combinations that don't
# actually work end-to-end.
net = ["net/net", "dep:hex"]
# NAT traversal — reflex probes, classification, rendezvous-
# coordinated hole-punch, and the stats surface. Exposed as
# optional on the NAPI class (methods return a typed Traversal
# error with stable `kind` discriminator when invoked; none of
# the existing surface changes). Framing (plan §5): traversal
# is an optimization, not a connectivity requirement. See the
# `NAT_TRAVERSAL_PLAN.md` top-of-doc framing rules.
nat-traversal = ["net", "net/nat-traversal"]
# Port mapping — opportunistic UPnP-IGD / NAT-PMP / PCP at
# startup. Exposes `tryPortMapping?: boolean` on `MeshOptions`.
# Builds on `nat-traversal`.
port-mapping = ["nat-traversal", "net/port-mapping"]
cortex = ["net/netdb", "net/redex-disk", "dep:async-trait"]
# AI tool calling — exposes MeshNode::list_tools() through the
# napi class as `NetMesh.listTools()`. Includes the substrate's
# `tool::*` types (ToolDescriptor, ToolEvent, ToolMetadataRegistry,
# tool.metadata.fetch RPC). On by default; binary cost is small
# (the feature is just the substrate-side types + the lazy
# auto-installed nRPC handler in the SDK). See AGENT_TOOLS.md.
tool = ["net/tool", "cortex"]
# Dataforts (Rebel Yell) surface — compiles the operator methods
# wiring greedy-LRU + data-gravity + future phases. Same shape as
# the Python binding — depends on cortex transitively for the
# Redex surface. Off by default; downstream consumers opt in.
# Toggling greedy / gravity at runtime is via `Redex::enable_*`
# methods; the Cargo feature only gates whether the binding
# surface compiles at all.
dataforts = ["cortex", "net", "net/dataforts", "dep:postcard"]
# Compute surface — `DaemonRuntime`, `MeshDaemon`, migration.
# Depends on `net` (mesh transport is what daemons ride) and
# brings in `net-sdk` at its `compute` feature for the
# already-shipped Rust surface. `dashmap` is added here because
# the compute module keeps a `kind -> TSFN` map that needs
# concurrent access without serializing the whole NAPI runtime.
# `net-sdk/compute` is forwarded explicitly so the SDK's compute
# code only compiles when this feature is active.
compute = ["net", "dep:net-sdk", "net-sdk/compute", "dep:dashmap"]
# HA / scaling overlays — `ReplicaGroup` / `ForkGroup` / `StandbyGroup`.
# Follows `SDK_GROUPS_SURFACE_PLAN.md`. Sits on top of `compute`.
# Forwards to `net-sdk/groups` so the SDK groups surface is only
# pulled into the build when this flag is set — a `compute`-only
# build doesn't compile the groups code.
groups = ["compute", "net-sdk/groups"]
# MeshOS daemon-author SDK (`MESHOS_SDK_PLAN.md` Phase 3). Builds on
# `compute` for the `MeshDaemon` trait + `Identity` wrapper and on
# the substrate's `net/meshos` for the supervisor runtime. The
# substrate's `meshos` feature implies `cortex`, which the Node
# binding's `cortex` feature already activates — list it here so
# consumers asking only for `meshos` get the full transitive dep
# chain.
meshos = ["compute", "cortex", "net/meshos", "net-sdk/meshos"]
# Deck SDK — operator-side bindings (`DECK_SDK_PLAN.md` Phase 5).
# Builds on `meshos` for the supervisor runtime + snapshot reader.
# Phase 1 substrate constraint: non-signing today.
deck = ["meshos", "net-sdk/deck"]
# Test-only helpers (`testInjectSyntheticPeer`, etc.). Gated
# separately so enabling `groups` alone does NOT export test-only
# APIs to production JS consumers. The vitest suite builds with
# `--features groups,test-helpers`; release / consumer builds stop
# at `--features groups`.
test-helpers = ["groups"]
# Aggregator-registry RPC client surface (`SDK_AGGREGATOR_SUBNET_PLAN.md`
# Stage 2). Builds on `net` + pulls in the SDK's `aggregator`
# re-export module so the NAPI binding gets BoundRegistryClient
# + install_aggregator_registry_service helpers for free.
aggregator = ["net", "dep:net-sdk", "net-sdk/aggregator"]
# MeshDB query layer — federated AST + planner + executor + result
# cache. Standalone of `net`: the Node SDK's first MeshDB slice
# ships a local executor over an in-memory ChainReader, so it
# doesn't require the mesh transport surface to compile.
meshdb = ["net/meshdb", "dep:postcard"]
# Local consent surface (`MCP_BRIDGE_SDK_PLAN.md` P2): CapabilityId,
# the ConsentPolicy gate, and the lock-protocol PinStore — thin
# wrappers over `net_sdk::consent` / `net_sdk::pins`, which are
# unconditional SDK modules (no net-sdk sub-feature to forward; pure
# local-state primitives with no mesh dependency). The one lock
# implementation stays in Rust — the binding never opens the store
# file directly.
consent = ["dep:net-sdk"]
# MCP bridge pure helpers (`MCP_BRIDGE_SDK_PLAN.md` P2): thin bindings
# for `classify` (credential-risk scoring a native node may DISPLAY
# before publishing an MCP-backed tool) and `lower_tool` (MCP
# `tools/list` entry -> Net ToolDescriptor + bridge metadata). Helpers
# only — publishing itself goes through the general SDK path; the
# forwarding/keychain internals are never bound (bridge doctrine #3).
mcp = ["consent", "dep:net-mcp"]
# Publish a node's OWN local tools as mesh capabilities
# (`PAYMENTS_PY_TS_SDK_GAP_PLAN.md` B5 prerequisite) — the inverse of `net
# wrap`, backed by a JS async tool handler. The free (unpriced) publish path;
# the Node payment provider will layer a `PaymentEngine` on top. Composite:
# `mcp` (the `net_mcp::wrap::ServerPublisher::publish_tools` surface +
# `ToolInvoker`), `net` + `net-sdk/net` (the SDK mesh surface `from_node_arc`
# needs), and `async-trait` for the `ToolInvoker` impl + the TSFN→Promise
# handler bridge. Mirrors the Python `publish` feature.
publish = ["mcp", "net", "dep:net-sdk", "net-sdk/net", "dep:async-trait"]
# Payments (`PAYMENTS_PY_TS_SDK_GAP_PLAN.md` Part B): the consent-gated
# CapabilityGateway (search/describe/invoke over `gated_invoke`) + the caller
# payment flow (spend policy, signers, approval verbs). `net-mcp` is already
# linked by `mcp`; this adds the `net-payments` caller flow (`mcp-gate` for the
# gate seam, `mesh` for `MeshPaymentChannel` + the SDK mesh surface). Thin per
# doctrine #1: every payment decision is the Rust flow's; the binding marshals.
payments = ["mcp", "net", "dep:net-payments"]
# Delegated agent identity + device enrollment (`NODE_DELEGATION_A2A_SDK_PLAN.md`
# WS-1/WS-2, Hermes V2 Phases 1+3): `deriveChildIdentity`, `RevocationRegistry`,
# `DelegationChain`, and the invite → join → approve enrollment surface
# (`OperatorEnrollment`, `DeviceEnrollment`, `NetMesh.join` / `renew` /
# `serveEnrollmentAuto`). Thin wrappers over `net_sdk::{delegation, revocation,
# enrollment, operator, devices, mesh_enroll}` — mirrors the Python `delegation`
# feature exactly (enrollment shares the gate; same SDK sub-features: `net` for
# the mesh surface `from_node_arc` needs, `cortex` for the nRPC the live
# join/renew/serve bridge rides).
delegation = ["net", "dep:net-sdk", "net-sdk/net", "net-sdk/cortex"]
# Agent-to-agent task handoff (`NODE_DELEGATION_A2A_SDK_PLAN.md` WS-3, Hermes V2
# Phase 3): `NetMesh.serveA2a` backed by a JS async task executor +
# submit/status/cancel by node id. Thin wrappers over `net_sdk::{a2a, mesh_a2a}`.
# Composite: `delegation` (the `net` + `net-sdk/net,cortex` mesh surface
# `net_sdk::mesh_a2a` needs) and `cortex` (the nRPC substrate + `async-trait`
# for the `TaskExecutor` impl). Mirrors the Python `a2a` feature.
a2a = ["delegation", "cortex"]
# Outbound HTTP-402 client (`PAYMENTS_PY_TS_SDK_GAP_PLAN.md` B3):
# `PaymentHttpClient` over `net-payments::flow::http402::X402HttpFlow`. Kept
# OUT of the default `.node`: it pulls `net-payments/http-facilitator`
# (reqwest + rustls + bundled roots), a real size add — an explicit opt-in,
# mirroring the Python `payments-http`.
payments-http = ["payments", "net-payments/http-facilitator", "dep:base64"]

[dependencies]
net = { package = "net-mesh", version = "0.32.0", path = "../..", default-features = false }
net-sdk = { package = "net-mesh-sdk", version = "0.32.0", path = "../../sdk", default-features = false, optional = true }
# The MCP bridge adapter, for the two pure helpers only (feature `mcp`).
net-mcp = { package = "net-mesh-mcp", version = "0.32.0", path = "../../adapters/mcp", optional = true }
# The payments caller flow (feature `payments`): the spend engine + gateway
# payment gate paid capabilities clear through. `mesh` brings the SDK mesh
# surface (`MeshPaymentChannel`, `net-sdk/net`+`cortex`); `mcp-gate` the
# `gated_invoke` payment seam.
net-payments = { version = "0.32.0", path = "../../payments", optional = true, features = ["mcp-gate", "mesh"] }
# The outbound HTTP-402 client base64-encodes the byte-preserved settlement
# response for audit. Optional + `payments-http`-gated (already in the lock via
# net-payments).
base64 = { version = "0.22", optional = true }
dashmap = { version = "6", optional = true }
parking_lot = "0.12"
# `napi` (runtime) and `napi-derive` MUST move in lockstep: napi-derive
# pulls napi-derive-backend, and from backend 5.0.5 the `#[napi(object)]`
# FromNapiValue glue calls `napi::bindgen_prelude::{decorate_field_error,
# missing_field_error}`, which first ship in the runtime at napi 3.9.4.
# napi-derive has no cargo dependency on napi, so this floor is the only
# thing keeping the generated code compilable — do not lower it below the
# napi-derive partner release.
napi = { version = "3.9.4", default-features = false, features = ["napi4", "napi6", "async", "tokio_rt"] }
napi-derive = "3.5.7"
# Zeroizing wrapper for transient operator-seed copies in the
# DeckClient / OperatorIdentity standalone constructors.
zeroize = "1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
# async-trait is needed because nRPC's RpcHandler trait is
# async; the implementor (NodeRpcHandler in mesh_rpc.rs) must
# use the same #[async_trait] macro the trait was defined with.
# Optional + cortex-gated so non-cortex builds don't pull it in.
async-trait = { version = "0.1", optional = true }
serde_json = "1.0.145"
bytes = "1.11.0"
arc-swap = "1.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hex = { version = "0.4", optional = true }
# Postcard is the canonical MeshDB wire codec; the Node binding
# decodes aggregate / joined-row / window payloads from result-row
# bytes. Pulled in only when the `meshdb` feature activates.
postcard = { version = "1", default-features = false, features = ["alloc"], optional = true }

[build-dependencies]
napi-build = "2.3.1"

# `[profile.release]` is intentionally NOT declared here. Cargo
# ignores non-root profiles with a warning ("profiles for the non
# root package will be ignored"). The workspace root Cargo.toml
# already sets `lto = true` (plus codegen-units = 1, panic = abort,
# opt-level = 3) under `[profile.release]`, and that's what governs
# this binding's release build.
