[package]
name = "net-python"
version = "0.25.2"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for Net event bus"
# Distributed via PyPI as `net-mesh` (see pyproject.toml), not via
# crates.io. Block accidental `cargo publish`.
publish = false

[lib]
name = "_net"
# `rlib` is needed alongside `cdylib` so in-crate `#[cfg(test)] mod
# tests` blocks compile — cargo requires rlib to link the unit-test
# harness. The published Python wheel still ships the `.so/.dylib`
# cdylib; the rlib is a build artifact only.
crate-type = ["cdylib", "rlib"]

[features]
# Out-of-the-box `pip install net-mesh-sdk` ships the full
# distributed-agent stack: mesh transport + NAT traversal +
# typed nRPC + capability-based service discovery + daemon
# supervision + replica/fork/standby coordination + MeshOS
# daemon-authoring + dataforts blob storage + MeshDB federated
# query plane + Redis dedup helper. Python devs can't rebuild
# the wheel — whatever PyPI shipped is what they have, so
# every primitive a harness vendor would plausibly want is on
# by default.
#
# `jetstream` / `port-mapping` stay opt-in: the NATS-specific
# adapter (+1.3 MB, niche audience that knows it wants NATS),
# and the UPnP/SOAP +1.4 MB outlier.
default = [
    "net",
    "nat-traversal",
    "cortex",
    "compute",
    "groups",
    "meshos",
    "dataforts",
    "meshdb",
    "redis",
    "aggregator",
    "tool",
]
# Pulls in `net-sdk` at its `redis` sub-feature for the
# `RedisStreamDedup` consumer helper. The dedup helper is a thin
# PyO3 wrapper around the canonical Rust implementation.
#
# Each Python feature opts in explicitly via its own
# `net-sdk/<sub>` activation; the `[dependencies]` line clears
# the dep's default features so a Redis-only consumer build does
# not transitively compile the net + compute + groups surfaces.
redis = ["net/redis", "dep:net-sdk", "net-sdk/redis"]
jetstream = ["net/jetstream"]
net = ["net/net", "dep:hex"]
# NAT traversal — reflex probes, classification, rendezvous-
# coordinated hole-punch, and the stats surface. Exposes
# `nat_type`, `reflex_addr`, `probe_reflex`, `reclassify_nat`,
# `traversal_stats`, and `connect_direct` on `NetMesh`. Off by
# default — the routed-handshake path reaches every peer
# regardless of this feature. Framing (plan §5): traversal is
# an optimization, not a connectivity requirement.
nat-traversal = ["net", "net/nat-traversal"]
# Port mapping — opportunistic UPnP / NAT-PMP / PCP. Exposes
# `try_port_mapping=None` as a `NetMesh.__init__` kwarg. Builds
# on `nat-traversal`.
port-mapping = ["nat-traversal", "net/port-mapping"]
cortex = ["net/netdb", "net/redex-disk", "dep:async-trait"]
# AI tool calling — exposes MeshNode::list_tools() through the
# pyo3 NetMesh as `mesh.list_tools()`. Includes the substrate's
# `tool::*` types (ToolDescriptor, ToolEvent, ToolMetadataRegistry,
# tool.metadata.fetch RPC). On by default; binary cost is small.
# See AGENT_TOOLS.md for the surface contract.
tool = ["net/tool", "cortex"]
# MeshDB query layer — federated AST + planner + executor + result cache.
# Standalone of the `net` feature: the Python SDK's first MeshDB slice
# ships a local executor over an in-memory ChainReader, so it doesn't
# require the mesh's transport surface to be compiled.
meshdb = ["net/meshdb", "dep:postcard"]
# Dataforts surface (Rebel Yell) — compile the operator
# methods that wire greedy-LRU + data-gravity + future phases.
# Toggling between greedy / gravity / future phases is a
# runtime decision via `Redex::enable_*` methods, not a Cargo
# feature choice; see `docs/misc/DATAFORTS_PLAN.md`. Cortex
# isn't strictly required for the substrate, but the Python
# install path threads through the cortex-gated Redex surface
# so we activate it transitively for binding-side consistency.
dataforts = ["cortex", "net", "net/dataforts", "dep:postcard"]
# Python surface for the `MeshDaemon` / migration runtime.
# Requires the `net` feature (for `NetMesh`) + the net-sdk
# compute feature. Forwards `net-sdk/compute` explicitly so the
# SDK's compute code only compiles when this feature is active.
compute = ["net", "dep:net-sdk", "net-sdk/compute", "dep:dashmap"]
# Stage 3 of `SDK_GROUPS_SURFACE_PLAN.md` — HA/scaling overlays
# (ReplicaGroup, ForkGroup, StandbyGroup). Sits on top of compute.
groups = ["compute", "net-sdk/groups"]
# MeshOS daemon-author SDK (`MESHOS_SDK_PLAN.md` Phase 2). Builds on
# `compute` for the `MeshDaemon` trait + `Identity` wrapper and on
# the substrate's `net/meshos` for the supervisor runtime. The
# substrate's `meshos` feature implies `cortex`, which the Python
# binding's `cortex` feature already activates if any cortex-tier
# class is reachable — listing `cortex` here keeps the dep chain
# explicit when consumers ask only for `meshos`.
meshos = ["compute", "cortex", "net/meshos", "net-sdk/meshos"]
# Deck SDK — operator-side bindings (`DECK_SDK_PLAN.md` Phase 4).
# Builds on `meshos` for the supervisor runtime + snapshot reader.
# Phase 1 substrate constraint: non-signing today (the substrate
# records the operator id but doesn't yet route through channel-
# auth); the binding surface is final.
deck = ["meshos", "net/meshos", "net-sdk/deck"]
# Aggregator-registry RPC client + fold.query client surfaces
# (`SDK_AGGREGATOR_SUBNET_PLAN.md` Stage 3). Builds on `net` + pulls in
# the SDK's `aggregator` re-export module so the binding gets
# RegistryClient / FoldQueryClient + the typed error hierarchy.
aggregator = ["net", "dep:net-sdk", "net-sdk/aggregator"]

[dependencies]
net = { package = "net-mesh", version = "0.25.2", path = "../..", default-features = false }
net-sdk = { package = "net-mesh-sdk", version = "0.25.2", path = "../../sdk", default-features = false, optional = true }
dashmap = { version = "6", optional = true }
parking_lot = "0.12"
pyo3 = { version = "0.28.0", features = ["extension-module"] }
# Bridge between Rust async (tokio) and Python asyncio coroutines.
# `future_into_py` converts a Rust future into a Python awaitable
# the user can `await`; `into_future` does the reverse for
# async-`def` handlers. Version-locked to pyo3 0.28 — track that
# bump whenever pyo3 itself moves.
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
# Zeroizing wrapper for transient operator-seed copies in the
# DeckClient / OperatorIdentity standalone constructors.
zeroize = "1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
serde_json = "1.0.145"
bytes = "1.11.0"
hex = { version = "0.4", optional = true }
# async-trait is needed because nRPC's RpcHandler trait is async;
# the implementor (PyRpcHandler in mesh_rpc.rs) must use the
# same #[async_trait] macro the trait was defined with. Optional +
# cortex-gated so non-cortex builds don't pull it in.
async-trait = { version = "0.1", optional = true }
# Postcard is the canonical MeshDB wire codec; the Python binding
# decodes `AggregateRowPayload` / `JoinedRowPayload` /
# `WindowBoundary` payloads from result-row bytes. Pulled in only
# when the `meshdb` feature activates.
postcard = { version = "1", default-features = false, features = ["alloc"], optional = true }

[build-dependencies]
pyo3-build-config = "0.28.0"

# `[profile.release]` intentionally omitted — cargo ignores non-root
# profiles ("profiles for the non root package will be ignored"). The
# workspace root governs release-profile settings (lto = true and
# friends) for every member crate.
